--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,20 +1,27 @@
+# config/packages/security.yaml
 security:
-    # Providers define how users are fetched (you can use in-memory, database, or other services)
+    # https://symfony.com/doc/current/security.html#registering-the-user-hashing-passwords
+    password_hashers:
+        Symfony\Component\Security\Core\User\PasswordAuthenticatedUserInterface: 'auto'
+    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory:
-            memory: ~  # Use in-memory users, replace with your DB provider in production
-
+        users_in_memory: { memory: null }
     firewalls:
-        # Disable security for assets like the profiler, CSS, images, and JS
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        main:
+            lazy: true
+            provider: users_in_memory
 
-        # API firewall for routes under /api
-        api:
-            pattern: ^/api  # Apply to all routes under /api
-            stateless: true  # We don't use sessions for API requests
+            # activate different ways to authenticate
+            # https://symfony.com/doc/current/security.html#firewalls-authentication
 
-    # Access control rules to protect the /api routes
+            # https://symfony.com/doc/current/security/impersonating_user.html
+            # switch_user: true
+
+    # Easy way to control access for large sections of your site
+    # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/api, roles: ROLE_USER }
+        # - { path: ^/admin, roles: ROLE_ADMIN }
+        # - { path: ^/profile, roles: ROLE_USER }
